--- a/nfldata/templates/nfldata/homepage.html
+++ b/nfldata/templates/nfldata/homepage.html
@@ -1,6 +1,5 @@
 
 {% load staticfiles %}
-{% load nvd3_tags %}
 
 <!DOCTYPE html>
 <html>
@@ -14,7 +13,7 @@
     <br />
 
     <div class="col-md-1 center-block text-center" style="font-size: x-large">
-      <a href="/nfldata/add-nfldata/" class="dark" style="cursor: pointer;">
+      <a href="/nfldata/view-nfldata/" class="dark" style="cursor: pointer;">
       <span class="glyphicon glyphicon-upload"></span>View Player Statistics</a>
     </div>
 
