site up and running simple draft algorithm

--- a/nfldata/templates/nfldata/homepage.html
+++ b/nfldata/templates/nfldata/homepage.html
@@ -20,6 +20,20 @@
     <br />
 
     <div class="col-md-1 center-block text-center" style="font-size: x-large">
+      <a href="/nfldata/view-teamdata/" class="dark" style="cursor: pointer;">
+      <span class="glyphicon glyphicon-upload"></span>View Team Statistics</a>
+    </div>
+
+    <br />
+
+    <div class="col-md-1 center-block text-center" style="font-size: x-large">
+      <a href="/nfldata/view-myteam/" class="dark" style="cursor: pointer;">
+      <span class="glyphicon glyphicon-upload"></span>View My Team</a>
+    </div>
+
+    <br />
+
+    <div class="col-md-1 center-block text-center" style="font-size: x-large">
       <a href="/nfldata/begin-draft/" class="dark" style="cursor: pointer;">
       <span class="glyphicon glyphicon-upload"></span>Begin Fantasy Draft</a>
     </div>
